# ci-cd-demo-app

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: ci.yml
app/: main.py  sub.py
test/: test_add.py  test_sub.py
