[tool.poetry]
name = "docker-container-demo-python"
version = "0.1.0"
description = ""
authors = ["Yaniv Ben Zvi <yaniv.benzvi@voyantis.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
